--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -141,16 +141,15 @@
                             $("#correoProfesor").val(data[0].cor);
                             $('select').val(data[0].curs);
                             $("#descripcionProfesor").val(data[0].descrip);	
+                            var consulta = "";
                             $("#resultado").empty();
 			                $.ajax({             
       			                url: "/verMensajesPrivados",  
       			                dataType: 'json',  
       			                type: 'POST',  
-      			                success: function(data) {                                         
-                                    for(var i = 0; i < data.length; i++){
-                                        consulta +='<div class="alert alert-info">'+data[i].nomusu+': '+data[i].descrip+' '+data[i].fec+'</div>';                       
-                                        alert(data[i].nomusu);
-                                    }
+      			                success: function(data) {                                                                            
+                                    for(var i = 0; i < data.length; i++)
+                                        consulta +='<div class="alert alert-info">'+data[i].nomusu+': '+data[i].descrip+' '+data[i].fec+'</div>';                                                                                           
                                     $("#resultado").append(consulta);		
       			                }
     		                });
