--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -103,12 +103,14 @@
         </div><br>
         <div class="row">
             <div class="col-md-2"></div> 
-            <div class="col-md-8" id='enviarMensaje'>
+            <div class="col-md-4" id='enviarMensaje'>
                 <input class="form-control" type="text" id="mensaje" placeholder="Envie un mensaje privado">
             </div> 
+            <div class="col-md-2"><button class="btn btn-info" id="ocultar">Enviar Mensaje</button></div> 
             <div class="col-md-2"></div> 
+            <div class="col-md-2"></div>
         </div>
-        <div class="row">
+        <div class="row"><br>
             <div class="col-md-2"></div> 
             <div class="col-md-8" id='resultado'></div> 
             <div class="col-md-2"></div> 
