--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -101,12 +101,12 @@
             <div class="col-md-2"></div> 
         </div><br>
         </div><br>
-        <div class="row">
+        <div class="row" id='enviarMensaje'>
             <div class="col-md-2"></div> 
-            <div class="col-md-4" id='enviarMensaje'>
+            <div class="col-md-4" >
                 <input class="form-control" type="text" id="mensaje" placeholder="Envie un mensaje privado">
             </div> 
-            <div class="col-md-2"><button class="btn btn-info" id="ocultar">Enviar Mensaje</button></div> 
+            <div class="col-md-2"><button class="btn btn-info" id="ocultar">Enviar</button></div> 
             <div class="col-md-2"></div> 
             <div class="col-md-2"></div>
         </div>
