--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -172,6 +172,7 @@
                                     });	
                                     $("#ocultar").on('click',function(){    
                                         $("#enviarMensaje").hide();
+                                        alert("aqui");
                                         $("#privado").on( "click", function() {
 			                                var studentdata = { idusu:valor, mensaje: $("#mensaje").val(), tipo: 2};                                           v
 			                                $.ajax({  
