--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -172,15 +172,16 @@
                                     });	
                                     $("#ocultar").on('click',function(){    
                                         $("#enviarMensaje").hide();
-                                        var studentdata = { idusu:valor, mensaje: $("#mensaje").val(), tipo: 2};                                           v
-			                                $.ajax({  
-      			                                url: "/mensajePrivado",  
-      			                                dataType: 'json',  
-      			                                type: 'POST',  
-      			                                data: studentdata,  
-      			                                success: function(data) { 
-      				                                alert("Se envio el mensaje privado al profesor");                       		
-      			                                }
+                                        var studentdata = { idusu: valor, mensaje: $("#mensaje").val(), tipo: 2}; 
+                                        alert(valor);                                          v
+			                            $.ajax({  
+      			                            url: "/mensajePrivado",  
+      			                            dataType: 'json',  
+      			                            type: 'POST',  
+      			                            data: studentdata,  
+      			                            success: function(data) { 
+      				                            alert("Se envio el mensaje privado al profesor");                       		
+      			                            }
     		                            });
                                     });	
       			                }
