--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -222,7 +222,7 @@
       			    type: 'POST',  
       			    data: studentdata,  
       			    success: function(data) { 
-      				    alert("Se envio el mensaje privado al profesor");                       		
+      				    alert("Se actualizo los datos del curso");		
       			    }
     		    });
                 $("#enviarMensaje").hide();
