--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -15,14 +15,14 @@
                         <div id="contenedor_imagen" ><img src="assets/images/SeMaslogo_st .png"/></div>
                         <p class="separacion_elementos_cabecero">Sémás</p>
                     </a>
-                    <div id="contenedor-titulo"><h2 id="titulo_head">Tu curso</h2></div>
+                    <div id="contenedor-titulo"><h2 id="titulo_head">Actualiza tus datos</h2></div>
                 </div>
                 <nav>
                     <a href="SCSE-Buscador.html" ><i class="glyphicon glyphicon-log-in"></i> Ir a cursos</a>
                     <a href="SCSE-Login.html" ><i class="glyphicon glyphicon-log-out"></i> Cerrar sesion</a>
                 </nav>
             </div>
-        </header> 
+        </header><br>
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-3">
