--- a/views/SCSE-Buscador.html
+++ b/views/SCSE-Buscador.html
@@ -12,7 +12,7 @@
         <header> 
             <div id="cabecero">
                 <div id="Logo-titulo">
-                    <a id="Logo" href="/views/Buscador_2.html">
+                    <a id="Logo" href="">
                         <div id="contenedor_imagen" ><img src="assets/images/SeMaslogo_st .png"/></div>
                         <p class="separacion_elementos_cabecero">Sémás</p>
                     </a>
